# Schiffeversenken

./: CMakeLists.txt  README.md
Files/: End.c  End.h  Global.h  Main.c  Play.c  Play.h  Start.c  Start.h
SchiffeVersenken/: SchiffeVersenken.sln
SchiffeVersenken/Debug/: SchiffeVersenken.ilk
SchiffeVersenken/SchiffeVersenken/: Main.c  SchiffeVersenken.vcxproj  SchiffeVersenken.vcxproj.filters
SchiffeVersenken/SchiffeVersenken/Debug/: SchiffeVersenken.exe.recipe  vc142.idb
SchiffeVersenken/SchiffeVersenken/Debug/SchiffeVersenken.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  SchiffeVersenken.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Schiffeversenken/: Schiffeversenken.sln
Schiffeversenken/Schiffeversenken/: Schiffeversenken.vcxproj  Schiffeversenken.vcxproj.filters
